# roa-game-data-hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  details.yaml  example.json
src/: config.cpp  config.h  dllmain.cpp
